fix header's layout issues, refactor css, put unit title on lesson page,

--- a/themes/if/static/css/less/pages/admin.less
+++ b/themes/if/static/css/less/pages/admin.less
@@ -369,14 +369,13 @@
     // ********************************************************************* //
     .add-content {
       margin-bottom: 0px;
-      margin-top: 20px;
       button {
         font-size: 11px;
         margin-bottom: 10px;
         padding: 10px 20px;
         &.delete {
           font-size: 14px;
-          padding: 8px 20px;
+          padding: 8px 12px;
         }
       }
       @media (max-width: 560px) {
